--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "class-iterator",
+  "name": "@gdg/class-iterator",
   "version": "0.0.1",
   "description": "Class: iterator; composable module.",
+  "repository": "gdg/class-iterator",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
+    "gdg",
     "iterator",
     "generator",
     "generator",
