--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@gdg/class-iterator",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Class: iterator; composable module.",
   "repository": "gdg/class-iterator",
   "main": "index.js",
   "scripts": {
+    "release": "standard-version",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -15,5 +16,8 @@
     "function"
   ],
   "author": "GDG/Tarek Hariri <dev.npk@gdg.io>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "standard-version": "^4.4.0"
+  }
 }
