--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
-language: node_js - '10' - '8' - '6'
+language: node_js 
+  - '10'
+  - '8'
+  - '6'
 deploy:
   provider: npm
   email: thariri@gdg.io
